--- a/src/content/blog/i-tried-azure-web-app-and-its-frustrating.mdx
+++ b/src/content/blog/i-tried-azure-web-app-and-its-frustrating.mdx
@@ -3,7 +3,7 @@ title: 'Hosting My Portfolio on Azure: The Ups and Downs'
 description: 'In this blog, I share my experience of hosting my portfolio on Azure and the challenges I faced during the process.'
 pubDate: 'Jul 08 2022'
 updatedDate: 'Jul 08 2024'
-heroImage: 'https://systempeaker.com/wp-content/uploads/2021/10/1634370400_614_30fdf294.png'
+heroImage: '/images/azure-thumbnail.webp'
 ---
 
 Recently, I decided to host my portfolio site on Azure. I had been using Vercel for a while, and while it was great, I wanted to explore Azure's offerings. In this blog post, I'll share my experience with Azure App Service, the challenges I faced, and what I learned along the way.
