--- a/src/content/blog/my-neovim-journey.mdx
+++ b/src/content/blog/my-neovim-journey.mdx
@@ -3,7 +3,7 @@ title: 'Cursor is Cool, But I''m Sticking With Neovim'
 pubDate: '2025-7-07'
 updatedDate: '2025-7-07'
 description: 'My unlikely journey with Neovim, from an Android phone to the age of AI, and why I still choose it over modern AI-powered IDEs.'
-heroImage: '/images/nvim.webp'
+heroImage: '/images/nvim-curser.webp'
 ---
 
 It seems like every developer I know is talking about **Cursor**. It's the new, AI-powered IDE that’s getting a ton of buzz, and for good reason! I totally get the appeal and its benefits, but I have to be honest: I’m happily sticking with my trusty old friend, **Neovim**.
