--- a/src/content/blog/my-neovim-journey.mdx
+++ b/src/content/blog/my-neovim-journey.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Cursor is Cool, But I''m Sticking With Neovim'
+title: "Cursor is Cool, But I'm Sticking With Neovim"
 pubDate: '2025-7-07'
 updatedDate: '2025-7-07'
 description: 'My unlikely journey with Neovim, from an Android phone to the age of AI, and why I still choose it over modern AI-powered IDEs.'
