--- a/src/content/blog/my-journey-with-monad-ends-here.mdx
+++ b/src/content/blog/my-journey-with-monad-ends-here.mdx
@@ -18,13 +18,13 @@ And build I did. I architected the entire application: TypeScript for type safet
 
 By late June, burnout hit hard. After a production issue on June 27, the pressure broke me. More horrifying than the mental stress was the realization that I couldn't afford my college fees on this stipend. So I made the hard decision to leave and pursue freelance work.
 
-Fifteen days later, a team member reached out. "We got $1M in funding from Monad," they said. "We can offer you a full-time role now." The founder, Harshul Vig, offered me a deal: $160/month (≈₹14,000) until mainnet launch or three months, whichever came first, then a full-time salary of ₹15 LPA. The timeline would let me cover my fees with my first proper paycheck. On July 20, 2025, I signed the offer letter and rejoined.
+Fifteen days later, a team member reached out. "We got funding from Monad," they said. "We can offer you a full-time role now." The founder, offered me a deal: $160/month (≈₹14,000) until mainnet launch or three months, whichever came first, then a full-time salary of ₹15 LPA. The timeline would let me cover my fees with my first proper paycheck. On July 20, 2025, I signed the offer letter and rejoined.
 
 ## The Airdrop & The Illusion
 
 For three months, I rewrote major parts of the application, added features, and prepared for mainnet launch. Then the Monad airdrop happened. I was eligible for 205,000 MON tokens—worth $5,000-10,000 at the time. For a moment, I felt relief.
 
-That relief was short-lived. On October 31, HR (Ishita Magazine) messaged me about setting up a wallet for the "claim portal." **On November 1, she clarified the airdrop was "a building reward for the organization, not for you personally."** They'd randomly used my email, she explained. Despite the tokens being in my personal wallet, accessed via my email, I was told it wasn't mine.
+That relief was short-lived. On October 31, HR messaged me about setting up a wallet for the "claim portal." **On November 1, she clarified the airdrop was "a building reward for the organization, not for you personally."** They'd randomly used my email, she explained. Despite the tokens being in my personal wallet, accessed via my email, I was told it wasn't mine.
 
 I gave them my seed phrase and asked about my full-time conversion. "They'll get back to me," I was told. Two days later: "We want to onboard you, but it takes time—we're restructuring."
 
@@ -34,7 +34,7 @@ I gave them my seed phrase and asked about my full-time conversion. "They'll get
 
 ## The Reality Check
 
-After four months of waiting, the "generous offer" arrived on November 15, 2025. **The employment agreement from Trinity Zero Seven Limited (a BVI-registered company) bore no resemblance to the July promises:**
+After four months of waiting, the "generous offer" arrived on November 15, 2025. **The employment agreement bore no resemblance to the July promises:**
 
 - **$320/month** for a four-month "mentorship period" (not the 3-month transition promised)
 - Then **$800/month** thereafter (not ₹15 LPA)
@@ -42,7 +42,7 @@ After four months of waiting, the "generous offer" arrived on November 15, 2025.
 - A 12-month term with strict exclusivity clauses
 - Token vesting with a 3-month cliff, but only if employed at TGE
 
-The $160/month July offer letter? Signed with Meow Finance/StealMax Technologies Pvt Ltd. The final contract? Trinity Zero Seven Limited. The $16,000/year promise? Nowhere to be found. The 5% core contributor token pool? Vague vesting terms that require me to stay until Token Generation Event or forfeit everything.
+The $160/month July offer letter? Signed with Meow Finance/. The $16,000/year promise? Nowhere to be found. The 5% core contributor token pool? Vague vesting terms that require me to stay until Token Generation Event or forfeit everything.
 
 **Most telling**: When I asked for updates on November 7, the founder wrote: _"We already have people for the role as we're restructuring the entire company, but we're still open to having you on board since you've been part of one of our brands for some time now."_
 
